--- a/01-fundamentos/bloco-06-forms-flexbox-responsivo/6.4/style.css
+++ b/01-fundamentos/bloco-06-forms-flexbox-responsivo/6.4/style.css
@@ -48,14 +48,14 @@
 
   .main-container {
     display: flex;
-    flex-wrap: wrap;
   }
 
   .movie-container {
     display: flex;
     flex-direction: column;
     border: 1px solid black;
-    width: 100%;
+    /* flex-basis: 750px; */
+    flex: 1 auto 1;
   }
   
   .movie-container h2 {
@@ -65,7 +65,6 @@
   
   .card-container {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-around;
     border: 1px solid black;
   }
@@ -77,7 +76,9 @@
     display: flex;
     height: 150px;
     justify-content: center;
-    margin: 10px;
+    margin: 7px;
+    /* margin era 10 */
+
   }
   
   .aside-container {
@@ -86,6 +87,9 @@
     margin: 20px;
     flex-basis: 350px;
     border: 1px solid black;
+    /* align-items: center;
+    flex-grow: 1; */
+    
   }
   
   .aside-container h3, h4 {
@@ -97,5 +101,3 @@
     margin: 10px 0;
     text-align: justify;
   }
-/* mexer com cada div dos filmes, e colocar row para a div main
-ou mexer com cada div dos filmes */
