--- a/01-fundamentos/bloco-06-forms-flexbox-responsivo/6.4/style.css
+++ b/01-fundamentos/bloco-06-forms-flexbox-responsivo/6.4/style.css
@@ -53,9 +53,8 @@
   .movie-container {
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
-    /* flex-basis: 750px; */
-    flex: 1 auto 1;
+    flex-basis: 700px;
+    flex-grow: 10;
   }
   
   .movie-container h2 {
@@ -66,18 +65,18 @@
   .card-container {
     display: flex;
     justify-content: space-around;
-    border: 1px solid black;
+    flex-wrap: wrap;
   }
   
   .card-container div {
     align-items: center;
     background-color: #5C687C;
-    border: black solid 1px;
     display: flex;
     height: 150px;
     justify-content: center;
-    margin: 7px;
-    /* margin era 10 */
+    margin: 10px;
+    flex-basis: 16%;
+    flex-grow: 1;
 
   }
   
@@ -86,9 +85,9 @@
     flex-direction: column;
     margin: 20px;
     flex-basis: 350px;
-    border: 1px solid black;
-    /* align-items: center;
-    flex-grow: 1; */
+    align-items: center;
+    flex-grow: 1;
+    justify-content: center;
     
   }
   
