--- a/01-fundamentos/bloco-06-forms-flexbox-responsivo/6.5/style.css
+++ b/01-fundamentos/bloco-06-forms-flexbox-responsivo/6.5/style.css
@@ -40,7 +40,10 @@
   }
   
   section {
-  
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    /* colocar flax-basis na div pai */
   }
   
   figure {
@@ -51,7 +54,8 @@
     font-size: 1em;
   }
 
-  @media screen and (min-width: 360px){
+  @media screen and (max-width: 600px){
+      /* alterado para max-width: 600px */
       body {
         background-color: aqua;
         margin: 15px;
@@ -62,21 +66,18 @@
       figcaption{
         font-size: 18px;
       }
-      section {
-        display: flex;
-        flex-wrap: wrap;
-      }
       figure {
         width: 150px;
+        /* usar flax-basis */
         margin: 7px;
       }
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 601px) {
       body {
         background-color: blueviolet;
       }
       p {
-          
+
       }
   }
