Exc 1 do 6.5 finalizado

--- a/01-fundamentos/bloco-06-forms-flexbox-responsivo/6.5/style.css
+++ b/01-fundamentos/bloco-06-forms-flexbox-responsivo/6.5/style.css
@@ -43,6 +43,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    flex-basis: 100%;
     /* colocar flax-basis na div pai */
   }
   
@@ -54,8 +55,7 @@
     font-size: 1em;
   }
 
-  @media screen and (max-width: 600px){
-      /* alterado para max-width: 600px */
+  @media screen and (max-width: 420px){
       body {
         background-color: aqua;
         margin: 15px;
@@ -67,17 +67,29 @@
         font-size: 18px;
       }
       figure {
-        width: 150px;
-        /* usar flax-basis */
+        /* flex-basis: 45%; */
         margin: 7px;
       }
   }
 
-  @media screen and (min-width: 601px) {
+  @media screen and (min-width: 768px) {
       body {
         background-color: blueviolet;
+        max-width: 1450px;
+      }
+      h1{
+        font-size: 40px;
+      }
+      h2{
+          font-size: 36px;
       }
       p {
-
+        font-size: 34px;
+      }
+      figcaption{
+        font-size: 22px;
+      }
+      figure {
+        flex-basis:47%;
       }
   }
